--- a/app/src/main/res/layout/activity_guide_page.xml
+++ b/app/src/main/res/layout/activity_guide_page.xml
@@ -23,9 +23,9 @@
         android:layout_marginTop="30dp"
         android:fontFamily="monospace"
         android:gravity="center"
-        android:text="@string/imu_and_local_version"
+        android:text="IMU and Cloud Version"
         android:textColor="#000000"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -40,9 +40,9 @@
         android:layout_marginTop="120dp"
         android:fontFamily="monospace"
         android:gravity="center"
-        android:text="@string/hnrl_wifi_sniffer"
+        android:text="HNRL WIFI Sniffer"
         android:textColor="#000000"
-        android:textSize="20sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
