--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,15 +2,15 @@
     <!-- Base application theme. -->
     <style name="Theme.HNRLWiFiSniffer" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/mediumslateblue</item>
-        <item name="colorPrimaryVariant">@color/mediumslateblue</item>
+        <item name="colorPrimary">@color/royalblue</item>
+        <item name="colorPrimaryVariant">@color/royalblue</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/mediumslateblue</item>
-        <item name="colorSecondaryVariant">@color/mediumslateblue</item>
+        <item name="colorSecondary">@color/royalblue</item>
+        <item name="colorSecondaryVariant">@color/royalblue</item>
         <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">@color/mediumslateblue</item>
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
